// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements OpenApi3_1Element should refract to semantic ApiDOM tree 1`] = `
(OpenApi3_1Element
  (MemberElement
    (StringElement)
    (OpenapiElement))
  (MemberElement
    (StringElement)
    (InfoElement))
  (MemberElement
    (StringElement)
    (JsonSchemaDialectElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (ServerElement)))
  (MemberElement
    (StringElement)
    (PathsElement))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (PathItemElement))
      (MemberElement
        (StringElement)
        (ReferenceElement
          (MemberElement
            (StringElement)
            (StringElement))))))
  (MemberElement
    (StringElement)
    (ComponentsElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (SecurityRequirementElement)))
  (MemberElement
    (StringElement)
    (ArrayElement
      (TagElement)))
  (MemberElement
    (StringElement)
    (ExternalDocumentationElement)))
`;

exports[`refractor elements OpenApi3_2Element should refract to semantic ApiDOM tree 1`] = `
(OpenApi3_2Element
  (MemberElement
    (StringElement)
    (OpenapiElement))
  (MemberElement
    (StringElement)
    (InfoElement))
  (MemberElement
    (StringElement)
    (JsonSchemaDialectElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (ServerElement)))
  (MemberElement
    (StringElement)
    (PathsElement))
  (MemberElement
    (StringElement)
    (ObjectElement
      (MemberElement
        (StringElement)
        (PathItemElement))
      (MemberElement
        (StringElement)
        (ReferenceElement
          (MemberElement
            (StringElement)
            (StringElement))))))
  (MemberElement
    (StringElement)
    (ComponentsElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (SecurityRequirementElement)))
  (MemberElement
    (StringElement)
    (ArrayElement
      (TagElement)))
  (MemberElement
    (StringElement)
    (ExternalDocumentationElement)))
`;
